--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
   <h1>Inventory Users</h1>
-  <a href="/users/new">Add User</a>
+  <a href="/users/new"><button>Add User</button></a>
   <ul>
     <% users.forEach(user => { %>
       <li>
@@ -16,5 +16,6 @@
       </li>
     <% }) %>
   </ul>
+  <a href="/"><button>Back</button></a>
 </body>
 </html>
