--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,7 @@
 </head>
 <body>
   <h1><%= title %></h1>
-  <a href="/users"><button>Select Inventories</button></a>
+  <a href="/users"><button>Select User</button></a>
+  <a href="/inventories"><button>Select Inventories</button></a>
 </body>
 </html>
